--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <script type="text/javascript">
+        window.splashURL = "<%= image_url('splash.png') %>";
+    </script>
     <%= yield %>
   </body>
 </html>
