--- a/app/assets/stylesheets/signup_container.css
+++ b/app/assets/stylesheets/signup_container.css
@@ -1,13 +1,33 @@
-
 body {
   text-align: center;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro",メイリオ,Meiryo,"ＭＳ Ｐゴシック",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ,
+    Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
 }
-
 
 .red-button {
   background-color: #e60023;
   color: white;
   cursor: pointer;
-  border-radius: 20px;
+  border-radius: 5px;
+  padding: 5px;
+  width: 135px;
+  margin: 10px;
 }
+
+button.link {
+  font-size: 12px;
+  text-align: left;
+  color: gray;
+  background: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+}
+/* 
+button.link span {
+  text-decoration: underline;
+} */
