--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pinterest</title>
+    <title>Kimterest</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <script type="text/javascript">
+        window.splashURL = "<%= image_url('splash.png') %>";
+        window.logoURL = "<%= image_url('logo.png') %>";
+        window.feedlogoURL = "<%= image_url('header_logo.png') %>";
+      
+
+    </script>
+    <%= favicon_link_tag asset_path('header_logo.png') %>
   </head>
 
   <body>
-    <script type="text/javascript">
-        window.splashURL = "<%= image_url('splash.png') %>";
-    </script>
+    
     <%= yield %>
   </body>
 </html>
