--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
     <script type="text/javascript">
         window.splashURL = "<%= image_url('splash.png') %>";
         window.logoURL = "<%= image_url('logo.png') %>";
+        window.menuURL = "<%= image_url('menu.png') %>";
         window.feedlogoURL = "<%= image_url('header_logo.png') %>";
+        window.defaultpfpURL = "<%= image_url('defaultpfp.png') %>";
       
 
     </script>
