--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -1,9 +1,9 @@
 
 
 .feed-logo {
-  height: 28px;
-  width: 28px;
-  padding: 4px;
+  height: 25px;
+  width: 25px;
+  padding: 2px;
   float: left;
 }
 
@@ -11,21 +11,40 @@
   display: flex;
   justify-content: space-around;
   height: 64px;
+  
+  margin-left: 10px;
+  margin-right: 50px;
 }
 
 .menu{
-  position: relative;
+  
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  height: fit-content;
+
 }
 
 .nav-button{
-  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  border-radius: 20px;
   border: none;
   cursor: pointer;
   height: 48px;
   width: 48px;
+  margin-bottom: 15px;
+  padding: 10px;
+  margin: 8px;
+  font-weight: bold;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ,
+    Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #8e8e8e;
+  font-size: 13px;
+
 }
 
 .nav-button:hover{
@@ -33,15 +52,12 @@
 }
 
 .menu-buttons{
-  
-  float: none;
   color: black;
   padding: 6px 6px;
   text-decoration: none;
   display: flex;
   text-align: left;
   font-size: 10px;
-  float: right;
   margin: 0;
   flex-direction: column;
   width: 50px;
@@ -54,7 +70,6 @@
 }
 
 .search-bar {
-  box-sizing: border-box;
   background-color: rgb(239, 239, 239);
   border-radius: 8px;
   display: flex;
@@ -63,9 +78,10 @@
   position: relative;
   padding-left: 16px; 
   padding-right: 16px;
-  align-items: center;
   justify-content: flex-start;
   text-shadow: none;
-  height: 40px;
+  border:none;
+  height: 35px;
+  font-weight: bold;
 }
 
