--- a/app/assets/stylesheets/signup_container.css
+++ b/app/assets/stylesheets/signup_container.css
@@ -1,5 +1,7 @@
 .form {
+  
   text-align: center;
+  
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
     Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ,
@@ -13,9 +15,17 @@
   cursor: pointer;
   border-radius: 5px;
   padding: 5px;
-  width: 135px;
+  width: 200px;
+  height: 32px;
   margin: 10px;
+  font-size: 12px;
 }
+
+img {
+  padding: 0px;
+}
+
+
 
 button.link {
   font-size: 12px;
@@ -33,11 +43,11 @@ button.link:hover {
 }
 
 .form-logo {
-  height: 53px;
-  width: 53px;
+  height: 45px;
+  width: 45px;
   object-fit: cover;
   border-radius: 50%;
-
+  /* padding: 0px; */
 }
 
 input {
@@ -46,10 +56,62 @@ input {
 
 .error-msg {
   display: flex;
-  font-size: 10px;
+  list-style: none;
+  justify-content: center;
+  font-size: 12px;
+  letter-spacing: normal;
   color: red;
   list-style: none;
 }
+h5{
+  font-weight: normal;
+  letter-spacing: normal;
+  margin: 8px;
+}
+.session-input{
+  height: 25px;
+  width: 190px;
+  border-radius: 5px;
+  border: 0.5px solid rgba( 142, 142, 142, 1);
+  color: black;
+  margin: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 8px;
+  border-color: #8e8e8e;
+  font-size: 12px;
+}
+
+.welcome {
+  margin: 5px;
+}
+
+.float-button{
+  position: absolute;
+  left: -150px;
+  top: -70px;
+  width: 105px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ,
+    Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  box-sizing: border-box;
+  background-color: #efefef;
+  font-weight: 700;
+  font-size: 13px;
+  height: 33px;
+  text-align: center;
+  color: #333333
+}
+
+.form-logo{
+  margin: 0;
+}
+
 /* 
 button.link span {
   text-decoration: underline;
