Add styling to profile and build board index and board item components

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
     <script type="text/javascript">
         window.splashURL = "<%= image_url('splash.png') %>";
         window.logoURL = "<%= image_url('logo.png') %>";
-        window.menuURL = "<%= image_url('menu.png') %>";
         window.feedlogoURL = "<%= image_url('header_logo.png') %>";
         window.defaultpfpURL = "<%= image_url('defaultpfp.png') %>";
+        window.plusURL = "<%= image_url('plus.svg') %>";
+        window.pencilURL = "<%= image_url('pencil.svg') %>";
+        window.uploadURL = "<%= image_url('upload.svg') %>";
+        window.menuURL = "<%= image_url('ellipsis.png') %>";
+
       
 
     </script>
