--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -14,6 +14,7 @@
   align-items: center;
   margin-left: 10px;
   margin-right: 50px;
+  border-bottom: #efefef solid 1px;
 }
 
 .menu{
@@ -27,7 +28,7 @@
 .nav-button{
   display: flex;
   justify-content: center;
-  height: fit-content;
+  max-height: fit-content;
   border-radius: 25px;
   border: none;
   cursor: pointer;
@@ -62,6 +63,17 @@
   flex-direction: wrap;
   width: 100px;
   cursor: pointer;
+  border: none;
+  /* border-bottom: #efefef solid 2px; */
+  border-radius: 8px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ,
+    Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #8e8e8e;
+  font-size: 10px;
+  
 
   
 }
