--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -4,8 +4,18 @@
   flex-wrap: wrap;
   justify-content: space-between;
   /* align-content: center; */
-  margin: 10px;
+  margin-left: 200px;
   padding: 20px;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,"\30D2\30E9\30AE\30CE\89D2\30B4 Pro W3",Hiragino Kaku Gothic Pro,"\30E1\30A4\30EA\30AA",Meiryo,"\FF2D\FF33 \FF30\30B4\30B7\30C3\30AF",Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+  color: #333;
+}
+
+.user-info{
+  margin: 35px;
+}
+
+h2 {
+  margin: 8px;
 }
 
 
@@ -21,7 +31,7 @@
   color: #8e8e8e;
   padding: 10px;
   margin: 0 auto;
-  width: auto;
+  width: 50px;
   cursor: pointer;
 }
 
@@ -44,6 +54,30 @@
   width: 80px;
   border-radius: 50%;
   /* display: inline-block; */
-  float:left;
-  
+  position: absolute;
+  right: 30%;
+  top: 25%;
+}
+
+
+.sub-nav {
+  margin-left: 18px;
+}
+.board-button {
+  border: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ,
+    Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #333;
+  border-radius: 999px;
+  cursor: pointer;
+  justify-content: center;
+  box-sizing: border-box;
+  background-color: #efefef;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 8px 16px;
+  text-decoration: none;
 }
