--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         window.pencilURL = "<%= image_url('pencil.svg') %>";
         window.uploadURL = "<%= image_url('upload.svg') %>";
         window.menuURL = "<%= image_url('ellipsis.png') %>";
+        window.editURL = "<%= image_url('edit.png') %>";
 
       
 
