--- a/app/assets/stylesheets/board_index.css
+++ b/app/assets/stylesheets/board_index.css
@@ -1,4 +1,4 @@
-/* .board-index {
+ .board-index {
   display:flex;
   flex-direction: row;
   justify-content: center;
@@ -27,23 +27,33 @@
 
 .board-container:hover {
   background-color: #d8d3d3;
-} */
+} 
 
-/* .edit-button {
+.edit-button {
   border-radius: 50%;
   border: none;
-} */
+} 
 
-/* .edit-button > img {
+.edit-button {
   border-radius: 50%;
   opacity: 0.9;
   left: 2px;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   z-index: 8;
   cursor: pointer;
-} */
+  opacity:0.5;
+  cursor: pointer;
+  border: solid;
+}
 
-/* .edit-button:hover{
+.edit-button:hover{
   opacity: 1.0;
-} */
+}
+
+.board-logo {
+  height:25px;
+  width: 25px;
+  position: relative;
+  left: -6px;
+}
