--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -1,5 +1,5 @@
 .modal-background {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.3);
   z-index: 10;
   display: flex;
   justify-content: center;
@@ -8,6 +8,7 @@
   bottom: 0px;
   left: 0px;
   right: 0px;
+  position: fixed;
   
 }
 
