--- a/app/assets/stylesheets/pin_index.css
+++ b/app/assets/stylesheets/pin_index.css
@@ -41,6 +41,18 @@
   width: 20px;
 }
 
+.caption {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ,
+    Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+    position: relative;
+    bottom: 40px;
+    text-align:center;
+    color: #333
+}
+
 /* .editpin-logo{
   height:20px;
   width: 20px;
