Added CSS to all forms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
         window.uploadURL = "<%= image_url('upload.svg') %>";
         window.menuURL = "<%= image_url('ellipsis.png') %>";
         window.editURL = "<%= image_url('edit.png') %>";
+        window.bgURL = "<%= image_url('boardbg.png') %>";
 
       
 
