--- a/app/assets/stylesheets/board_index.css
+++ b/app/assets/stylesheets/board_index.css
@@ -23,10 +23,24 @@
     Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 13px;
+  background-image: url('boardbg.png');
+  background-size: contain;
+  z-index: 1;
+  border: none;
+  box-shadow: #8e8e8e;
+}
+
+.title {
+  color: #333;
+  font-weight: bold;
+  position: relative;
+  top: 134px;
+  right: 51px;
 }
 
 .board-container:hover {
   background-color: #d8d3d3;
+  z-index: 5;
 } 
 
 .edit-button {
@@ -42,13 +56,19 @@
   width: 30px;
   z-index: 8;
   cursor: pointer;
-  opacity:0.5;
+  opacity:0.8;
   cursor: pointer;
   border: solid;
+  position: relative;
+  left: -41px;
+  top: 46px;
+  background-color:white;
+  border: rgb(245, 94, 94) solid 2px;
 }
 
 .edit-button:hover{
   opacity: 1.0;
+  transform: scale(1.3)
 }
 
 .board-logo {
