--- a/app/assets/stylesheets/board_index.css
+++ b/app/assets/stylesheets/board_index.css
@@ -23,7 +23,7 @@
     Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 13px;
-  background-image: url('boardbg.png');
+  background-image: url('https://raw.githubusercontent.com/lisali72159/pinterestclone/master/app/assets/images/boardbg.png');
   background-size: contain;
   z-index: 1;
   border: none;
