Added back button and edit function to pin show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         window.menuURL = "<%= image_url('ellipsis.png') %>";
         window.editURL = "<%= image_url('edit.png') %>";
         window.bgURL = "<%= image_url('boardbg.png') %>";
+        window.backURL = "<%= image_url('back.png') %>";
 
       
 
