Add CSS to pin/board show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         window.editURL = "<%= image_url('edit.png') %>";
         window.bgURL = "<%= image_url('boardbg.png') %>";
         window.backURL = "<%= image_url('back.png') %>";
+        window.redirectURL = "<%= image_url('redirect.png') %>";
 
       
 
