--- a/app/assets/stylesheets/pin_show.css
+++ b/app/assets/stylesheets/pin_show.css
@@ -6,7 +6,7 @@
 
 .pin-container{
   width: 60%;
-  height: auto;
+  min-height: 500px;
   border-radius: 10px;
   border: none;
   box-shadow: 0px 0px 3px 3px #bdbbbb;
@@ -15,7 +15,17 @@
 }
 
 #pin-info{
-  display: block;
+  float:right;
+  width:25%;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+  font-size: 12px;
+  color: #333333;
+}
+
+#pin-image {
+  display: flex;
+  float:left;
+  max-width: 40%;
 }
 
 #back{
@@ -32,9 +42,30 @@
 }
 
 #pin-image > img{
-  width: 40%;
+  width: 100%;
   height: auto;
   border: none;
   cursor: pointer;
-  border-radius: 10%;
+  border-radius: 10px;
+}
+a {
+  color: #333333;
+  text-decoration: none;
+}
+.redirect{
+  border-radius: 20px;
+  padding: 8px;
+  justify-content: center;
+  width: max-content;
+  background-color: #efefef;
+  font-weight: bold;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+}
+
+.redirect > img {
+  height:10px;
+}
+
+.redirect:hover {
+  background-color: #cccaca;
 }
