--- a/app/assets/stylesheets/pin_show.css
+++ b/app/assets/stylesheets/pin_show.css
@@ -5,35 +5,46 @@
 }
 
 .pin-container{
-  width: 60%;
+  width: 70%;
   min-height: 500px;
   border-radius: 10px;
   border: none;
   box-shadow: 0px 0px 3px 3px #bdbbbb;
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
   margin: 40px auto;
+  padding: 0px;
+}
+
+.pin-container:hover{
+  /* background-color:#cdcdcd;
+  z-index: 10; */
 }
 
 #pin-info{
-  float:right;
-  width:25%;
+  display: block;
+  margin:20px;
+  width:100%;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   font-size: 12px;
   color: #333333;
+  text-align: left;
 }
 
 #pin-image {
-  display: flex;
-  float:left;
-  max-width: 40%;
+  display: block;
+  width: 100%;
+  height:auto;
 }
 
 #back{
   display: inline-block;
   border: none;
   border-radius: 50%;
-  padding: 0px;
+  margin-left: 50px;
+  margin-top:50px;
   cursor: pointer;
+  padding:5px;
 }
 
 #back > img{
@@ -41,17 +52,25 @@
   height: inherit;
 }
 
+#back:hover{
+  background-color:#efefef;
+  border-radius: 50%;
+}
+
 #pin-image > img{
   width: 100%;
-  height: auto;
+  height: inherit;
   border: none;
-  cursor: pointer;
-  border-radius: 10px;
+  margin: 0;
+  cursor: zoom-in;
+  border-radius: 10px 10px 0px 0px;
 }
+
 a {
   color: #333333;
   text-decoration: none;
 }
+
 .redirect{
   border-radius: 20px;
   padding: 8px;
@@ -68,4 +87,17 @@ a {
 
 .redirect:hover {
   background-color: #cccaca;
+}
+
+button {
+  outline:none;
+}
+
+.edit-pin-button{
+  position:relative;
+  
+  border: none;
+  border-radius: 50%;
+  padding:5px;
+  left: 220px;
 }
