Add board name and author to pin show page

--- a/app/assets/stylesheets/pin_show.css
+++ b/app/assets/stylesheets/pin_show.css
@@ -93,6 +93,9 @@ button {
   outline:none;
 }
 
-.red-button > #edit{
- justify-content: center;
+#edit{
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
+
