--- a/app/assets/stylesheets/pin_index.css
+++ b/app/assets/stylesheets/pin_index.css
@@ -18,6 +18,7 @@
 .pin-photo > img:hover {
   filter: brightness(0.7);
   z-index: -1;
+  display: initial;
 }
 
 .magic-button {
@@ -26,12 +27,12 @@
   top: -54px;
   border: none;
   cursor: pointer;
-  
+  opacity: 0;
   background-color: rgb(255, 255, 255);
   font-weight: bolder;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 0;
-  opacity: 0;
+  
   left: 2px;
 }
 
