Added byline icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,9 @@
         window.bgURL = "<%= image_url('boardbg.png') %>";
         window.backURL = "<%= image_url('back.png') %>";
         window.redirectURL = "<%= image_url('redirect.png') %>";
-
-      
-
     </script>
     <%= favicon_link_tag asset_path('header_logo.png') %>
+    <script src="https://kit.fontawesome.com/936d68e809.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
