--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,8 +15,8 @@
  */
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #e76677; /* Blue */
+  border: 16px solid #f3f3f3; 
+  border-top: 16px solid #e76677; 
   border-radius: 50%;
   width: 30px;
   height: 30px;
